# COMSW4156-Git-Gud

./: .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  app.out  clang-tidy-results.txt  cpplint_output.txt  docker-compose.yml  setup.sh  test_setup.cpp
.github/workflows/: cmake-single-platform.yml
docs/: cpplint_output.txt
external_libraries/: README.md  install_libraries.sh
include/: Auth.h  Counseling.h  DatabaseManager.h  Food.h  Healthcare.h  Logger.h  MockDatabaseManager.h  Outreach.h  RouteController.h  Shelter.h  SubscriptionManager.h
src/: Auth.cpp  DatabaseManager.cpp  RouteController.cpp  SubscriptionManager.cpp  main.cpp
src/services/: Counseling.cpp  Food.cpp  Healthcare.cpp  Outreach.cpp  Shelter.cpp
system testing/: GitGud.postman_collection.json
test/: AuthUnitTests.cpp  CounselingUnitTests.cpp  DataBaseTest.cpp  FoodUnitTests.cpp  HealthcareUnitTests.cpp  IntegrationTests.cpp  OutreachUnitTests.cpp  RouteControllerUnitTests.cpp  ShelterUnitTests.cpp  SubscriptionManagerUnitTests.cpp
